--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -783,211 +783,211 @@ footer{
     
     }    
 }
-@media screen and (min-width: 990px) and (max-width: 1300px) {
-    footer{
-        width: 100%;
-        height: auto;
-        background: #000000;
+// @media screen and (min-width: 990px) and (max-width: 1300px) {
+//     footer{
+//         width: 100%;
+//         height: auto;
+//         background: #000000;
         
-        .footer-container{
-            width: 100%;
-            height: auto;
-            margin: 0 auto;
-            padding: 0; 
+//         .footer-container{
+//             width: 100%;
+//             height: auto;
+//             margin: 0 auto;
+//             padding: 0; 
     
-            .footer-parent{
-                width: 100%;
-                height: auto;
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
-                flex-wrap: wrap;
-                // flex-direction: column;
+//             .footer-parent{
+//                 width: 100%;
+//                 height: auto;
+//                 display: flex;
+//                 justify-content: space-around;
+//                 align-items: center;
+//                 flex-wrap: wrap;
+//                 // flex-direction: column;
              
     
-                .footer-text,
-                .footer-maps,
-                .footer-form {
-                  padding: 20px;
-                  border: 1px solid #000;
-                  margin: 10px;
-                }
+//                 .footer-text,
+//                 .footer-maps,
+//                 .footer-form {
+//                   padding: 20px;
+//                   border: 1px solid #000;
+//                   margin: 10px;
+//                 }
 
-                .footer-text{
-                    width: 40%;
-                    margin: 25px 0;
+//                 .footer-text{
+//                     width: 40%;
+//                     margin: 25px 0;
                     
-                    .text{
-                        text-align: center;
-                         h1{
-                            font-size: 35px;
-                            font-weight: 700;
-                            color: white;
-                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-                            padding: 10px 0;
-                         }
-                         hr{
-                            width: 50px;
-                            height: 4px;
-                            background: red;
-                            border: none;
-                            margin: 0 auto;
+//                     .text{
+//                         text-align: center;
+//                          h1{
+//                             font-size: 35px;
+//                             font-weight: 700;
+//                             color: white;
+//                             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+//                             padding: 10px 0;
+//                          }
+//                          hr{
+//                             width: 50px;
+//                             height: 4px;
+//                             background: red;
+//                             border: none;
+//                             margin: 0 auto;
     
-                         }
-                    }
-                    .call{
-                        width: 100%;
-                        padding: 30px 0;
-                        text-align: start;
-                        flex-direction: column;
-                        text-align: center;
+//                          }
+//                     }
+//                     .call{
+//                         width: 100%;
+//                         padding: 30px 0;
+//                         text-align: start;
+//                         flex-direction: column;
+//                         text-align: center;
     
-                        h3{
-                            color: white;
-                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-                            margin: 0 0 20px 0;
-                            font-size: 15px;
-                        }
+//                         h3{
+//                             color: white;
+//                             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+//                             margin: 0 0 20px 0;
+//                             font-size: 15px;
+//                         }
     
-                        a{
-                            font-size: 12px;
-                            color: white;
-                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-                        }
-                    }
-                    .tabs{
-                        width: 100%;
-                        text-align: center;
+//                         a{
+//                             font-size: 12px;
+//                             color: white;
+//                             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+//                         }
+//                     }
+//                     .tabs{
+//                         width: 100%;
+//                         text-align: center;
     
-                        h3{
-                            color: white;
-                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-                            font-weight: 600;
-                            margin: 0 0 10px 0;
-                        }
+//                         h3{
+//                             color: white;
+//                             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+//                             font-weight: 600;
+//                             margin: 0 0 10px 0;
+//                         }
     
-                        .tab{
-                            width: 70%;
-                            height: auto;
-                            display: flex;
-                            // justify-content: center;
-                            align-items: center;
-                            gap: 10px;
-                            text-align: end;
-                            // flex-direction: column;
+//                         .tab{
+//                             width: 70%;
+//                             height: auto;
+//                             display: flex;
+//                             // justify-content: center;
+//                             align-items: center;
+//                             gap: 10px;
+//                             text-align: end;
+//                             // flex-direction: column;
     
     
-                            span{
-                                color: red;
-                                font-size: 25px;
-                            }
+//                             span{
+//                                 color: red;
+//                                 font-size: 25px;
+//                             }
     
-                            a{
-                                color: white;
-                                font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-                                font-weight: 600;
-                                font-size: 12px;
+//                             a{
+//                                 color: white;
+//                                 font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+//                                 font-weight: 600;
+//                                 font-size: 12px;
                                 
-                            }
-                        }
-                    }
+//                             }
+//                         }
+//                     }
     
-                }
+//                 }
     
-                .footer-maps{
-                    width: 100%;
-                    order: 3;
-                    display: flex;
-                    justify-content: center;
+//                 .footer-maps{
+//                     width: 100%;
+//                     order: 3;
+//                     display: flex;
+//                     justify-content: center;
     
-                    .inframe{
-                      width: 67%;
-                      height: 150px;
-                      border-radius: 10px;
-                      margin: 0 auto;
+//                     .inframe{
+//                       width: 67%;
+//                       height: 150px;
+//                       border-radius: 10px;
+//                       margin: 0 auto;
     
     
-                    }
-                }
-                .footer-form{
-                    width: 50%;
-                    padding: 0 15px;
-                    order: 2;
+//                     }
+//                 }
+//                 .footer-form{
+//                     width: 50%;
+//                     padding: 0 15px;
+//                     order: 2;
     
-                    form{
-                        width: 100%;
-                        line-height: 65px;
+//                     form{
+//                         width: 100%;
+//                         line-height: 65px;
     
-                        h1{
-                            font-size: 25px;
-                            color: white;
-                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+//                         h1{
+//                             font-size: 25px;
+//                             color: white;
+//                             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     
-                        }
+//                         }
     
-                        input{
-                            width: 100%;
-                            height: 45px;
-                            padding: 0 15px;
-                            outline: none;
+//                         input{
+//                             width: 100%;
+//                             height: 45px;
+//                             padding: 0 15px;
+//                             outline: none;
     
-                        }
-                        textarea{
-                            width: 100%;
-                            height: 200px;
-                            outline: none;
-                            padding: 15px;
-                        }
-                        button{
-                            width: 100%;
-                            height: 45px;
-                            border-radius: 12px;
-                            background: #D5192F;
-                            color: white;
-                            border: none;
-                            cursor: pointer;
-                            font-size: 16px;
-                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+//                         }
+//                         textarea{
+//                             width: 100%;
+//                             height: 200px;
+//                             outline: none;
+//                             padding: 15px;
+//                         }
+//                         button{
+//                             width: 100%;
+//                             height: 45px;
+//                             border-radius: 12px;
+//                             background: #D5192F;
+//                             color: white;
+//                             border: none;
+//                             cursor: pointer;
+//                             font-size: 16px;
+//                             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     
-                        }
+//                         }
     
-                    }
-                }
+//                     }
+//                 }
     
-            }
+//             }
     
-        }
+//         }
     
-        .footer-end{
-            width: 100%;
-            height: 120px;
-            background: #111216;
+//         .footer-end{
+//             width: 100%;
+//             height: 120px;
+//             background: #111216;
     
-            .container{
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                flex-direction: column;
-                margin: 0 auto;
-                padding:  20px;
-                text-align: center;
+//             .container{
+//                 width: 100%;
+//                 height: 100%;
+//                 display: flex;
+//                 justify-content: space-between;
+//                 align-items: center;
+//                 flex-direction: column;
+//                 margin: 0 auto;
+//                 padding:  20px;
+//                 text-align: center;
     
-                h3{
-                    // font-size: 10px;
-                    color: white;
-                    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-                }
-                p{
-                    color: white;
-                    font-family: Arial, Helvetica, sans-serif;
-                    font-size: 17px;
-                }
+//                 h3{
+//                     // font-size: 10px;
+//                     color: white;
+//                     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+//                 }
+//                 p{
+//                     color: white;
+//                     font-family: Arial, Helvetica, sans-serif;
+//                     font-size: 17px;
+//                 }
     
-            }
+//             }
     
-        }
+//         }
     
-    }     
-}
+//     }     
+// }
