--- a/src/components/Main-swiper/Swiper.scss
+++ b/src/components/Main-swiper/Swiper.scss
@@ -1,26 +1,4 @@
 
-// .swiper {
-//     width: 100%;
-//     height: 100%;
-//   }
-  
-//   .swiper-slide {
-//     text-align: center;
-//     font-size: 18px;
-//     background: #fff;
-  
-//     /* Center slide text vertically */
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//   }
-  
-//   .swiper-slide img {
-//     display: block;
-//     width: 100%;
-//     height: 100%;
-//     object-fit: cover;
-//   }
   
   .MainSwiper{
     width: 1300px;
@@ -141,31 +119,31 @@
 
   }
 }
-@media screen and (min-width: 990px) and (max-width: 1300px) {
-  .MainSwiper{
-    width: 100%;
-    height: 350px;
-    margin: 0 auto;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    padding: 0 25px;
+// @media screen and (min-width: 990px) and (max-width: 1300px) {
+//   .MainSwiper{
+//     width: 100%;
+//     height: 350px;
+//     margin: 0 auto;
+//     overflow: hidden;
+//     display: flex;
+//     align-items: center;
+//     padding: 0 25px;
     
-    .main-swiper{
-      width: 260px;
-      height: 220px;
+//     .main-swiper{
+//       width: 260px;
+//       height: 220px;
 
-      img{
-        width: 250px;
-        border-radius: 20px;
-        object-fit: cover;
-      }
+//       img{
+//         width: 250px;
+//         border-radius: 20px;
+//         object-fit: cover;
+//       }
 
-    }
+//     }
 
 
-  }
-}
+//   }
+// }
 // @media screen and (min-width: 769px) and (max-width: 990px) {
 //   .MainSwiper{
 //     width: 100%;
