--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -165,33 +165,33 @@
 
     }
   }
-  // @media screen and (min-width: 990px) and (max-width: 1300px) {
-  //   .Header-slider{
-  //     width: 100%;
-  //     height: auto;
+  @media screen and (min-width: 990px) and (max-width: 1300px) {
+    .Header-slider{
+      width: 100%;
+      height: auto;
 
-  //     .header-slider-chiled{
-  //       width: 100%;
-  //       height: 70vh;
+      .header-slider-chiled{
+        width: 100%;
+        height: 70vh;
 
-  //       img{
-  //         width: 100%;
-  //         object-fit: cover;
-  //       }
+        img{
+          width: 100%;
+          object-fit: cover;
+        }
          
-  //       .container{
-  //         .text{
-  //           width: 70%;
-  //           display: flex;
-  //           align-items: center;
+        .container{
+          .text{
+            width: 70%;
+            display: flex;
+            align-items: center;
   
-  //           h3{
-  //             font-size: 30px;
-  //           }
-  //         }
-  //       }
+            h3{
+              font-size: 30px;
+            }
+          }
+        }
      
-  //     }
+      }
 
-  //   }
-  // }
+    }
+  }
